remove unnecessary instructions, add terminal option